# ChangeLog for x11-misc/xtrlock
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.25 2013/09/14 10:02:31 ago Exp $

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> xtrlock-2.2.ebuild:
  Stable for x86, wrt bug #484506

  12 Sep 2013; Agostino Sarubbo <ago@gentoo.org> xtrlock-2.2.ebuild:
  Stable for ppc, wrt bug #484506

  12 Sep 2013; Agostino Sarubbo <ago@gentoo.org> xtrlock-2.2.ebuild:
  Stable for amd64, wrt bug #484506

  14 Nov 2012; Jeroen Roovers <jer@gentoo.org> xtrlock-2.2.ebuild:
  Install debian/changelog.

*xtrlock-2.2 (14 Nov 2012)

  14 Nov 2012; Jeroen Roovers <jer@gentoo.org> +xtrlock-2.2.ebuild:
  Version bump by Mr. Anderson (bug #443090).

  05 Mar 2012; Agostino Sarubbo <ago@gentoo.org> xtrlock-2.0-r3.ebuild:
  Stable for amd64, wrt bug #397289

  17 Feb 2012; Jeroen Roovers <jer@gentoo.org> -xtrlock-2.0-r2.ebuild:
  Old.

  17 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> xtrlock-2.0-r3.ebuild:
  x86 stable wrt bug #397289

  03 Feb 2012; Brent Baude <ranger@gentoo.org> xtrlock-2.0-r3.ebuild:
  Marking xtrlock-2.0-r3 ppc for bug 397289

*xtrlock-2.0-r3 (12 Sep 2010)

  12 Sep 2010; Kacper Kowalik <xarthisius@gentoo.org>
  +xtrlock-2.0-r3.ebuild:
  Respect CC,LDFLAGS wrt bug 336940. Thanks to Diego for the report.

  27 Dec 2008; Santiago M. Mola <coldwind@gentoo.org>
  -files/xtrlock-2.0-gcc34.patch, -files/xtrlock-2.0-overflow.patch,
  -xtrlock-2.0-r1.ebuild:
  Remove old.

  12 May 2008; Christian Faulhammer <opfer@gentoo.org>
  xtrlock-2.0-r2.ebuild:
  stable x86, bug 221439

  12 May 2008; nixnut <nixnut@gentoo.org> xtrlock-2.0-r2.ebuild:
  Stable on ppc wrt bug 221439

  21 Jul 2007; David Shakaryan <omp@gentoo.org> xtrlock-2.0-r1.ebuild:
  Update dependencies, add die messages, fix quotes.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  21 Oct 2006; David Shakaryan <omp@gentoo.org> xtrlock-2.0-r2.ebuild: