@@ -1,26 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST xtrlock_2.0-14.tar.gz 7746 SHA256 2b25b6b91c33e61f1b9f6acf292cc34c58d8f04b00e4e3d2689c1b13c6714fbe SHA512 b03e14e15222d11d400ad2fe6258be3d0346846f07f30a62d9f22672b3716d8283d34d604c126351b01fcc98bfc3e8901c96c9117d619341d6cd89343235fdc2 WHIRLPOOL d47e9493e5bd50c72a13117563b3901052f85af2c2d22c8b5127aca350a93b5c3f09a6701afb5e811131917660535c5b78bf0c927835f5d72325466c0b9f673f
 DIST xtrlock_2.2.tar.gz 20716 SHA256 eed63851f4ad9f3026fd0a73767c8d2e5e2b973e050d271be6ec5086faa11ef6 SHA512 00eb877c721d5ad134912ab61969c96ede3b9e8b551cdc527da1b1dab404643b4b03f73a656293efae1bc6a186376addf8000cd500341273a24534bd186af9c9 WHIRLPOOL 0abd1ed9c45fcbd392e989d7e2d29121419620d8e6d767bb84c17c3535bcec9c2b86544109897934aa3607bcb36387e34bf7b30cfbf81c639603b04ba29dde9e
-EBUILD xtrlock-2.0-r3.ebuild 872 SHA256 559814797913ee6347c9fcfa2bb00d82ad25374612d154b1793d1d75fdd1e405 SHA512 43119d3186944c8c40814a142e555ff578a87d19d0bae4d52ce0e1baefba342eb08ef377edc7ece2aadd97a32d6af84feff71ee6dd2cdd606a2f59376d4d1f3e WHIRLPOOL 5333ddfb19585904115ca87f1fa447ab01b2d729b3c6306ae25586f4e108e3abd37329883c851a622a6afe916624d0e9955d328ab399b3946c601cb4afa4e841
 EBUILD xtrlock-2.2.ebuild 876 SHA256 405d3234b8f4a4e4ff23f14f3ed26a2a3890618e4bab0ca7888f07efaf705924 SHA512 dad98f229f782a4894535f71b62541725af0a977a47b98d0395340e0e908f03ff1fe23b2c3cade8eb37258b32ca207518ee16b533b80f6ef36ff2c8e6bc64ed7 WHIRLPOOL 6bac01c94114d8fadf3e968eee08f980e4f7cc3a48cd5f40b6a195cf4768cb2f064df591bd56e7970929634be3afdb98e43868477447f51ef1d93aa97ecf0b9b
-MISC ChangeLog 3771 SHA256 d89e8b54550f8cc11a86459c5dc8eb63462b4c4f28123795330d7fb968aa34eb SHA512 15491010cc89efc05c40b3cd4ee5d35c618c7a00eb876b8bd9800b8e7567bb0992ac5569bc434e4fe2dd8adfdf8ba3a4dc11469875db3ebf6f2db438d620e653 WHIRLPOOL 23be2b7eabe6da0e592df9d0367d2f49ba1d8a0a6dde08c9aa60c04ba5f86ac3976cd7f476271a174159ab672a5bacd7c6e721085134ec28a3193d94d5373e55
+MISC ChangeLog 3850 SHA256 7e56fee9aca8fab307f26babac8cd552e87f391cbbd0fa70297bf3d8f8af151d SHA512 b81105d35fd466bc6ed8100318959167106a3f4bfa5f89c1c3343f3e2c080caf745c86843d2d47520e9b4f7fb4fd1da19f5496c7093d3a59f2dab99cfff016fa WHIRLPOOL efa57d320db852ad8285a2d65096daae1de483d66d40573378639168a22f091b82108524743a49c6144bfb1b4846891f456de4dc2fe6fd78c1a35206f69693cd
 MISC metadata.xml 173 SHA256 2f2c48f12680e78f700e809ba6ff98c67b1ea8b707291659c1bfb6b20d28835f SHA512 0f9f902a37286192de62589f1aace6bec3cfe2a8511ac95e98b55324a9da1a5e79b8f14316e1be0b818e90c0be0cec5fe16f75d9055301a774b241e1486f62c2 WHIRLPOOL 0d0c57c7890f2cdb7210d2d1d61d03d412478747414999bc7919d70b8243ddc66d7903df50158671e8cc454913b4d859f752bbe3709404aa15608e1f1234d717
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSNDQwAAoJELp701BxlEWfpQcP/19jABkoVzzdvtdIaT26Er2I
-2MM6nsSpmC2LgzT4S4kGqBbAwdh9Op5ig/miQfsEaczp2xNGtrDA6dUwAd6QCDON
-q8JJ34/VbwPXDdFQY8Y1tVgLuMlIJp1+ojNRXfOSHShkLprt+4T2PWjufGyUo3u/
-utBr7UaqDWe1iC+W4p+xMK4kHRK+miqUGzp6L5iOsFAoQh0yQEnOxwi/8IiHSHmu
-v0OHXe8LZwvdj1ZKl7Z1XaG9S4XrIbslypZhZWETReDx4U6nOKiwzFItIrbwrNzY
-agMEJGk+STnjixBPf8MprE/2fD8W90M9FgtrQxF1usCkxJIdHxcHSclFq9GlVpbN
-oDjwvLAHR87HnCXr23tjWPDWW9u3GUK1KmYkw0iExWQI3vFf+8QYt9oXxO67erE3
-xGDajuwHvB9VcXdVipRN8oznrW4UCqYb8FjbRjRThNeBF9tV6jK45HQVazVDBxWh
-QR9ECcQxRKYGXelfSFTKWptMofAHiCOUxaNFrsNq6VLp43rMEzDXXrtkvH36IhXa
-oKoog+iCaJ5kmaBRqAw7O2Ym3M2mwGDe1jGvVMN703UyTjCTsG02QK0RXUgOFeSE
-TU51wFCdDaiUpP+JnOMaqAbt0WWh9LXARKi7PuCz+Eq/lW86KXJYBdO95967ez/e
-MVQlg8cO9QAyJPKjY+bC
-=QKj+
+iEYEAREIAAYFAlI0amEACgkQVWmRsqeSphMS4QCfbUJcwtUymzq40hgck8L+Mht+
+Jy8An0KZgNNple/kCtE60TKYnXgglcVf
+=t61P
 -----END PGP SIGNATURE-----
