@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xtrlock
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.25 2013/09/14 10:02:31 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.26 2013/09/14 13:53:36 jer Exp $
+
+  14 Sep 2013; Jeroen Roovers <jer@gentoo.org> -xtrlock-2.0-r3.ebuild:
+  Old.
 
   14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> xtrlock-2.2.ebuild:
   Stable for x86, wrt bug #484506
